# UMI-3D

./: README.md  run_dataset_pipeline.py
diffusion_policy/config/: train_diffusion_unet_timm_umi_workspace.yaml
diffusion_policy/config/task/: umi.yaml
diffusion_policy/dataset/: umi_dataset.py
diffusion_policy/model/vision/: timm_obs_encoder.py
diffusion_policy/policy/: diffusion_unet_timm_policy.py
diffusion_policy/workspace/: train_diffusion_unet_image_workspace.py
example/calibration/: fisheye.json
scripts/: detect_aruco.py  do.txt
scripts_slam_pipeline/: 00_detect_aruco.py  01_run_calibrations.py  02_generate_dataset_plan.py  03_generate_replay_buffer.py  auto_bag_to_mp4_aligned.py  auto_umi_3d_slam.sh  do.txt
sensors_calibration/fisheye_intrinsics/: calibrate_fisheye_intrinsics.py
sensors_calibration/livox2cam_calibration/src/: CMakeLists.txt  package.xml
sensors_calibration/livox2cam_calibration/src/calib_borad_files/: calib_target_umi_3d.STL
sensors_calibration/livox2cam_calibration/src/config/: qr_params.yaml
sensors_calibration/livox2cam_calibration/src/include/: common_lib.h
sensors_calibration/livox2cam_calibration/src/launch/: calib.launch
sensors_calibration/livox2cam_calibration/src/rviz_cfg/: livox2cam_calibration.rviz
sensors_calibration/livox2cam_calibration/src/src/: lidar_detect.hpp  main.cpp  qr_detect.hpp
umi/common/: cv_util.py  timecode_util.py
umi_3d_slam_ws/: umi_3d_slam.sh  umi_3d_slam_rviz.sh
umi_3d_slam_ws/src/rpg_vikit-master/vikit_common/include/vikit/: equidistant_camera.h
umi_3d_slam_ws/src/umi_3d_slam/: CMakeLists.txt  package.xml
umi_3d_slam_ws/src/umi_3d_slam/config/: camera_pinhole_mid360_180.yaml  mid360_180.yaml
umi_3d_slam_ws/src/umi_3d_slam/include/: IMU_Processing.h  LIVMapper.h  vio.h
umi_3d_slam_ws/src/umi_3d_slam/launch/: mapping_mid360_180.launch  mapping_mid360_180_min.launch
umi_3d_slam_ws/src/umi_3d_slam/rviz_cfg/: umi_3d_slam.rviz
umi_3d_slam_ws/src/umi_3d_slam/scripts/: fisheye_to_pinhole_node.py
umi_3d_slam_ws/src/umi_3d_slam/src/: IMU_Processing.cpp  LIVMapper.cpp  save_camera_trajectory.cpp  vio.cpp
